--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -1,6 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string name="app_name">APStudyVoca</string>
-  <!-- TODO: Remove or change this placeholder text -->
   <string name="makeAList">MAKE A LIST</string>
   <string name="ListName">List Name</string>
   <string name="ADD">ADD</string>
