--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
   <string name="EnteredCorrectly">Entered correctly</string>
   <string name="DoNotLeaveEmpty">Please do not leave word and meaning empty</string>
   <string name="Search">Search</string>
+  <string name="StudyInverse">Study🔄</string>
 </resources>
