--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -16,4 +16,5 @@
   <string name="EnteredCorrectly">Bien enregistré</string>
   <string name="DoNotLeaveEmpty">Ne pas laissez le mot et la définition vide</string>
   <string name="Search">Recherche</string>
+  <string name="StudyInverse">Étudier🔄</string>
 </resources>
