검색기능 만드는 중. 몇몇 버그 수정

--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -17,4 +17,6 @@
   <string name="DoNotLeaveEmpty">Please do not leave word and meaning empty</string>
   <string name="Search">Search</string>
   <string name="StudyInverse">STUDY🔄</string>
+  <string name="List">List</string>
+  <string name="SameWord">Il y a déjà le même mot.</string>
 </resources>
