--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -17,4 +17,6 @@
   <string name="DoNotLeaveEmpty">Ne pas laissez le mot et la définition vide</string>
   <string name="Search">Recherche</string>
   <string name="StudyInverse">Étudier🔄</string>
+  <string name="List">Liste</string>
+  <string name="SameWord">이미 같은 단어가 있습니다.</string>
 </resources>
