--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -17,4 +17,5 @@
   <string name="DoNotLeaveEmpty">단어와 의미칸을 채워주세요</string>
   <string name="Search">검색</string>
   <string name="StudyInverse">🔄공부하기</string>
+  <string name="List">단어장</string>
 </resources>
