--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="app_name">APStudyVoca</string>
+  <string name="app_name">Voca Study</string>
   <!-- TODO: Remove or change this placeholder text -->
   <string name="makeAList">MAKE A LIST</string>
   <string name="ListName">List Name</string>
@@ -19,4 +19,5 @@
   <string name="StudyInverse">Study🔄</string>
   <string name="List">List</string>
   <string name="SameWord">There\'s already the same word.</string>
+  <string name="noSearchResult">No search result</string>
 </resources>
