--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
   <string name="makeAList">MAKE A LIST</string>
   <string name="ListName">List Name</string>
   <string name="ADD">ADD</string>
-  <string name="Study">STUDY</string>
+  <string name="Study">STUDY⬇</string>
   <string name="Cancel">CANCEL</string>
   <string name="Modify">MODIFY</string>
   <string name="Word">Word</string>
@@ -16,7 +16,7 @@
   <string name="EnteredCorrectly">Entered correctly</string>
   <string name="DoNotLeaveEmpty">Please do not leave word and meaning empty</string>
   <string name="Search">Search</string>
-  <string name="StudyInverse">Study🔄</string>
+  <string name="StudyInverse">Study⬆</string>
   <string name="List">List</string>
   <string name="SameWord">There\'s already the same word.</string>
   <string name="noSearchResult">No search result</string>
