--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -4,7 +4,7 @@
   <string name="makeAList">단어장 만들기</string>
   <string name="ListName">단어장 이름</string>
   <string name="ADD">추가</string>
-  <string name="Study">공부하기</string>
+  <string name="Study">공부하기⬇</string>
   <string name="Cancel">취소</string>
   <string name="Modify">수정</string>
   <string name="Word">단어</string>
